--- a/.eslintrc
+++ b/.eslintrc
@@ -22,9 +22,12 @@
     'no-plusplus': 0,
     "no-case-declarations": 0,
     "import/prefer-default-export": 0,
+    "quotes": 0,
+    'react/destructuring-assignment': 0,
     "react/jsx-indent-props": 0,
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0,
+    "react/button-has-type": 0,
     "one-var-declaration-per-line": 0,
     'jsx-a11y/no-noninteractive-element-interactions': 0,
     'jsx-a11y/heading-has-content': 0,
@@ -35,32 +38,19 @@
     'jsx-a11y/label-has-for': 0,
     'prefer-destructuring': 0,
     'no-lonely-if': 0,
+    'react/jsx-one-expression-per-line': 0,
     "import/newline-after-import": 0,
     "no-else-return": 0,
     "no-eval": 0,
     "class-methods-use-this": 0,
     "react/sort-comp": 0,
     "one-var": 0,
-    "comma-dangle": [
-      "error",
-      "never"
-    ],
+    "comma-dangle": ["error", "never"],
     "indent": 0,
-    # "indent": [
-      "error",
-      "tab",
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "react/jsx-indent": [
-      0, 'tab'
-    ],
+    "react/jsx-indent": [0, 'tab'],
     "react/prefer-stateless-function": 0,
     "import/no-extraneous-dependencies": 0,
     "no-underscore-dangle": 0,
-    "react/prop-types": [
-      0
-    ]
+    "react/prop-types": [0]
   }
 }
