--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "firebase": "^6.2.4",
+    "grommet": "^2.7.1",
+    "grommet-icons": "^4.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   },
@@ -18,7 +23,13 @@
     "start": "NODE_ENV=production node server.js"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "babel-plugin-styled-components": "^1.10.4",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.14.2",
     "nodemon": "^1.19.1"
   }
 }
