--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "react/button-has-type": 0,
     "one-var-declaration-per-line": 0,
     'jsx-a11y/no-noninteractive-element-interactions': 0,
+    'jsx-a11y/accessible-emoji': 0,
     'jsx-a11y/heading-has-content': 0,
     'jsx-a11y/click-events-have-key-events': 0,
     'jsx-a11y/no-static-element-interactions': 0,
