--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "firebase": "^6.2.4",
@@ -11,9 +12,11 @@
     "grommet-icons": "^4.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.1.0",
+    "next-progressbar": "^1.0.0",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
+    "react-loading": "^2.0.3",
     "styled-components": "^4.3.2"
   },
   "scripts": {
@@ -30,6 +33,7 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "request": "^2.88.0"
   }
 }
